Opened 4 years ago

Closed 4 years ago

Last modified 4 years ago

#16525 closed bug (fixed)

FirstBootPrompt crash when booting to desktop

Reported by: luroh Owned by: AlwaysLivid
Priority: blocker Milestone: R1/beta3
Component: Applications/FirstBootPrompt Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev54575, gcc2h

Pressing the 'Boot to Desktop' button indeed boots to desktop but causes FirstBootPrompt to crash:

vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x4, ip 0x13a3888, write 0, user 1, thread 0x134
debug_server: Thread 308 entered the debugger: Segment violation
stack trace, current PC 0x13a3888  _FindField__C8BMessagePCcUlPPQ28BMessage12field_header + 0x28:
  (0x715d8868)  0x13a4032  FindData__C8BMessagePCcUllPPCvPl + 0x4e
  (0x715d88a8)  0x13a5e7a  FindBool__C8BMessagePCclPb + 0x4a
  (0x715d88f8)  0x13a6e45  GetBool__C8BMessagePCclb + 0x29
  (0x715d8928)  0x13a6e12  GetBool__C8BMessagePCcb + 0x2a
  (0x715d8958)  0xcec837  QuitRequested__16BootPromptWindow + 0x5f
  (0x715d8988)  0x1394436  _WindowQuitLoop__12BApplicationbT1 + 0x76
  (0x715d89b8)  0x13944f7  _QuitAllWindows__12BApplicationb + 0x43
  (0x715d89e8)  0x1391945  QuitRequested__12BApplication + 0x25
  (0x715d8a18)  0x139f657  _QuitRequested__7BLooperP8BMessage + 0x33
  (0x715d8a98)  0x139d832  DispatchMessage__7BLooperP8BMessageP8BHandler + 0x46
  (0x715d8ac8)  0x1392e85  DispatchMessage__12BApplicationP8BMessageP8BHandler + 0x4e9
  (0x715d8cc8)  0x139f5b1  task_looper__7BLooper + 0x205
  (0x715d8d08)  0x139e109  Loop__7BLooper + 0x65
  (0x715d8d48)  0x13917fe  Run__12BApplication + 0x2a
  (0x715d8d78)  0xcea9ec  main + 0x30
  (0x715d8ec8)  0xcea9b3  _start + 0x5b
  (0x715d8ef8)  0x185b7e0  runtime_loader + 0x134

Attachments (1)

FirstBootPrompt_hrev54592.png (61.3 KB ) - added by luroh 4 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by waddlesplash, 4 years ago

Milestone: UnscheduledR1/beta3
Priority: normalblocker
Version: R1/beta2R1/Development

comment:2 by pulkomandy, 4 years ago

Owner: changed from stippi to AlwaysLivid
Status: newassigned

comment:3 by pulkomandy, 4 years ago

Resolution: fixed
Status: assignedclosed

Should be fixed in hrev54590.

comment:4 by luroh, 4 years ago

hrev54592, gcc2h

Well, FirstBootPrompt doesn't crash any more but I am asked to restart the system.

  • Pressing 'Restart system' takes me to desktop.
  • Pressing 'Cancel' takes me back to FirstBootPrompt, where pressing 'Boot to Desktop' indeed takes me to desktop.

Last edited 4 years ago by luroh (previous) (diff)

by luroh, 4 years ago

comment:5 by luroh, 4 years ago

hrev54594, gcc2h

Now the system restarts, but why am I being prompted to restart in the first place?

Luckily (especially for live DVD usage), clicking 'Cancel' and then 'Boot to Desktop' a second time seems to achive what I wanted to do in the first place, i.e. get rid of FirstBootPrompt and continue using the system.

comment:6 by pulkomandy, 4 years ago

What the change is supposed to do is ask for confirmation and reboot if you close the window, but not if you click "run installer" or "boot to desktop". If you click "boot to desktop" and it asks you for rebooting, that is yet another bug in that change.

comment:7 by luroh, 4 years ago

I see. Looks like another bug indeed then.

Note: See TracTickets for help on using tickets.