FirstBootPrompt: some NULL pointer checks

Should fix #16525